--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <title>Vitesse Lite</title>
   <meta name="description" content="Opinionated Vite Starter Template">
+  <meta name="naive-ui-style" />
 </head>
 
 <body class="font-sans dark:text-white dark:bg-hex-121212">
