--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <title>Vitesse Lite</title>
   <meta name="description" content="Opinionated Vite Starter Template">
-  <meta name="naive-ui-style" />
 </head>
 
-<body class="font-sans dark:text-white dark:bg-hex-121212">
+<body class="font-sans">
   <div id="app"></div>
   <noscript>
     <div>Please enable JavaScript to use this application.</div>
